- 7/22/2024 - 
Automated login process into Publix PASSPort using selenium and webdriver. Ready to begin scraping page for schedule information. 
Current goal is to integrate with Apple Calendar for personal use. Google and Outlook calendars will follow.

- 7/24/2024 -
Added Day object to use for holding data scraped from schedule page. Cleaned up main() by defining functions

- 7/27/2024 -
Completed schedule access. Program now accesses most recent schedule data instead of staying on current week.
Ready to begin scraping data from PASSPort.

- 8/5/2024 -
Able to retrieve HTML source and print <main> HTML to terminal.
Created new module to separate scraping from schedule retrieval and organize better.

- 8/10/2024 -
Successfully retrieved desired information from HTML file. Now must work on Google Calendar 
connectivity (schedule_uploader.py) and properly format data from schedule_processor.py to send to calendar.